# rust-rag-toolchain

./: .gitignore  LICENSE  README.md  codecov.yaml
.github/workflows/: build_unit_test_lint.yml  coverage.yml  integration_tests.yml  main_and_pr_build.yml  rust.yml
rag-client/: Cargo.toml  README.md
rag-client/pg_vector/: compose.yml
rag-client/src/: main.rs
rag-examples/: Cargo.toml
rag-examples/src/: example_text.txt  main.rs
rag-examples/src/docker/data/: postmaster.pid
rag-toolchain/: Cargo.toml  README.md  integrationlcov.info
rag-toolchain/benches/: chunking_benchmark.rs  generate_chunks.rs  raw.txt
rag-toolchain/benches/toolchain_chunking/: chunking_benchmark.rs
rag-toolchain/benches/toolchain_orchestrator/: orchestrator_benchmark.rs
rag-toolchain/coverage/: unitlcov.info
rag-toolchain/examples/anthropic_chat_completions/: main.rs
rag-toolchain/examples/basic_rag_chain/: main.rs
rag-toolchain/examples/chat_history_chain/: main.rs
rag-toolchain/examples/open_ai_chat_completions/: main.rs
rag-toolchain/examples/pg_vector/: main.rs
rag-toolchain/examples/pg_vector/docker/: compose.yml
rag-toolchain/examples/pg_vector/docker/scripts/: init.sql
rag-toolchain/src/: lib.rs
rag-toolchain/src/chains/: basic_rag_chain.rs  chat_history_chain.rs  mod.rs  types.rs  utils.rs
rag-toolchain/src/chunkers/: character_chunker.rs  mod.rs  token_chunker.rs  traits.rs
rag-toolchain/src/clients/: mod.rs  openai_client.rs  traits.rs  types.rs
rag-toolchain/src/clients/anthropic/: anthropic_core.rs  anthropic_messages.rs  mod.rs
rag-toolchain/src/clients/anthropic/model/: chat_completions.rs  errors.rs  mod.rs
rag-toolchain/src/clients/model/: chat_completions.rs  embeddings.rs  errors.rs  mod.rs
rag-toolchain/src/clients/open_ai/: mod.rs  open_ai_chat_completions.rs  open_ai_core.rs  open_ai_embeddings.rs
rag-toolchain/src/clients/open_ai/model/: chat_completions.rs  embeddings.rs  errors.rs
rag-toolchain/src/common/: embedding_shared.rs  mod.rs  postgres_shared.rs  types.rs
rag-toolchain/src/loaders/: mod.rs  single_file_loader.rs  traits.rs
rag-toolchain/src/retrievers/: mod.rs  postgres_vector_retriever.rs  traits.rs
rag-toolchain/src/stores/: mod.rs  pg_vector.rs  postgres_vector_store.rs  sqlite_vector_store.rs  traits.rs
rag-toolchain/src/toolchain_chunking/: chunker.rs  mod.rs
rag-toolchain/src/toolchain_embeddings/: client.rs  embedding_models.rs  mod.rs  openai_embeddings.rs
rag-toolchain/src/toolchain_indexing/: chunking.rs  destinations.rs  embedding_task.rs  mod.rs  sources.rs  traits.rs  types.rs
rag-toolchain/src/toolchain_indexing/chunkers/: mod.rs  token_chunker.rs
rag-toolchain/src/toolchain_indexing/loaders/: mod.rs  single_file_loader.rs
rag-toolchain/src/toolchain_indexing/stores/: mod.rs  pg_vector.rs  pg_vector_store.rs
rag-toolchain/src/toolchain_orchestrator/: README.md  destinations.rs  embedding_client.rs  embedding_task.rs  external.rs  mod.rs  orchestrator.rs  sources.rs  traits.rs
rag-toolchain/src/toolchain_vectordb/: mod.rs
rag-toolchain/src/util/: mod.rs
rag-toolchain/src/util/clients/: mod.rs  openai_client.rs
rag-toolchain/src/util/stores/: pg_vector.rs  traits.rs
rag-toolchain/tests/: mod.rs
rag-toolchain/tests/pg_vector_integration_test/: mod.rs  pg_vector.rs  postgres_vector_retriever_integration_test.rs  test-data.json  test_data copy.json  test_data.json
rag-toolchain/tests/pg_vector_integration_test/docker/: Dockerfile  compose.yml
rag-toolchain/tests/pg_vector_integration_test/docker/scripts/: init.sql
rag-toolchain/tests/pg_vector_store/features/: test.feature
rag-toolchain/tests/single_file_loader/: mod.rs  single_file_loader_test.rs
rag-toolchain/tests/toolchain_chunking_test/: chunking_test.rs  mod.rs
rag-toolchain/tests/toolchain_orchestrator_test/: embedding_client_test.rs  mod.rs  orchestrator_test.rs
(+118 files in other folders)
