[package]
name = "rag-toolchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# For integration tests
# cargo test --test *

# For unit tests
# cargo test --lib

[lib]
name = "rag_toolchain"
crate-type = ["lib"]

[dependencies]
tiktoken-rs = "0.5.7"
threadpool = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
typed-builder = "0.18.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7.3", features = ["chrono", "postgres", "runtime-tokio-rustls"]}
pgvector = { version = "0.3", features = ["sqlx"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
async-trait = "0.1.74"
