[package]
name = "rag-toolchain"
version = "0.1.0"
edition = "2021"

[[example]]
name = "pg_vector_example"
path = "examples/pg_vector/main.rs"
required-features = ["pg_vector"]

[[example]]
name = "open_ai_chat_completion_example"
path = "examples/open_ai_chat_completions/main.rs"

[[example]]
name = "basic_rag_chain_example"
path = "examples/basic_rag_chain/main.rs"

# For integration tests
# cargo test --test *

# For unit tests
# cargo test --lib

[features]
default = ["pg_vector"]
pg_vector = ["dep:pgvector"]

[dev-dependencies]
mockall = "0.12.1"
criterion = "0.5.1"
mockito = "1.2.0"
testcontainers = "0.15.0"

[[bench]]
name = "generate_chunks"
path = "benches/chunking_benchmark.rs"
harness = false

[lib]
name = "rag_toolchain"
crate-type = ["lib"]

[dependencies]
tiktoken-rs = "0.5.7"
threadpool = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
typed-builder = "0.18.0"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
async-trait = "0.1.74"
lazy_static = "1.4.0"

# Postgres Vector
pgvector = { version = "0.3", features = ["sqlx"], optional = true }
